# ChaosProject

./: CMakeLists.txt
.cache/clangd/index/: _fixes.hpp.8B24DD63C35F45ED.idx  _vectorize.hpp.A377290B547726F9.idx  common.hpp.B5854B631461294B.idx  compute_common.hpp.EAF68F15D6CF139E.idx  compute_vector_relational.hpp.9EBA1A629DFD014E.idx  crtImage.cpp.618A3B42E6CEF728.idx  crtImage.hpp.80AA6435B0DCA8A5.idx  exponential.hpp.AC92F2E289BBB465.idx  func_common.inl.4034DAE18920BA73.idx  func_exponential.inl.AE9224CCA53EA2AA.idx  func_geometric.inl.719782AA53D981EF.idx  func_integer.inl.5369E2D6387728D6.idx  func_matrix.inl.54B9E37543BB276A.idx  func_packing.inl.0834E351DF98A32E.idx  func_trigonometric.inl.DBE13277A9087679.idx  func_vector_relational.inl.D19053EF04B552BA.idx  fwd.hpp.E35DAD5FA5B84A1F.idx  geometric.hpp.9A233C1DC2D3A6BD.idx  glm.hpp.338DB6061092C5E4.idx  integer.hpp.537C793526199150.idx  (+116 more)
headers/: camera.hpp  crtImage.hpp  crtVector.hpp  globals.h  homework.hpp  intersection.hpp  jsonUtilities.hpp  light.hpp  matrix.hpp  mesh.hpp  ppmImage.hpp  ray.hpp  renderer.hpp  scene.hpp  settings.hpp  task.hpp  triangle.hpp
inputs/Homework8_Lights/: scene2.crtscene
outputs/01_Introduction/: chaos_camp_homework_1.mtl  pawn_self_modeled.mtl
outputs/04_Triangle/: output.txt
src/: camera.cpp  crtImage.cpp  jsonUtilities.cpp  main.cpp  matrix.cpp  mesh.cpp  ppmImage.cpp  scene.cpp  triangle.cpp  utilities.cpp
src/Tasks/: homework2.cpp  homework3.cpp  homework4.cpp  homework5.cpp  homework6.cpp  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp
